<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2017 ClockGen

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<Keyboards>
	<Keyboard 
	id="6afa05d1-9934-400f-a5ef-24534036096" 
	nameResId="@string/full_layout_en"
	layoutResId="@xml/full_layout_en"
	landscapeResId="@xml/full_layout_en"
	iconResId="@drawable/app_icon"
	defaultDictionaryLocale="en" 
	description="@string/full_layout_en_description"
	index="1"/>
	<Keyboard 
	id="95c46310-de74-4311-8e6c-478817fa9945" 
	nameResId="@string/full_layout_ru"
	layoutResId="@xml/full_layout_ru"
	landscapeResId="@xml/full_layout_ru"
	iconResId="@drawable/app_icon"
	defaultDictionaryLocale="en" 
	description="@string/full_layout_ru_description"
	index="2"/>
</Keyboards>
